--- a/package.json
+++ b/package.json
@@ -6,5 +6,10 @@
   },
   "dependencies": {
     "vitepress": "^1.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.12"
   }
 }
